--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="hero">
         <div class="hero-content">
             <div class="content-1">
-                <h1>Genesis VPN</h1>
+                <h1>Electron VPN</h1>
                 <h3>Fast, secure and private.</h3>
             </div>
 
