--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <title>Genesis VPN - Register</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=3mzvesJ9KuSwFGc55jUeVb0iLLLHBAYe8f68CYIgNbr_YOsayrbI1MSHFx4iWjWQTuO6T4qKw-P8_u6Q9xzLFt8q8-1VgKfETyhet3_WTSM" charset="UTF-8"></script><script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+    <script src="scripts/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/firebaseui.css" />
 </head>
 <body>
